--- a/src/index.html
+++ b/src/index.html
@@ -20,45 +20,41 @@
   <link href="assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
   <!-- Waves Effect Css -->
-  <link href="assets/plugins/node-waves/waves.css" rel="stylesheet" />
+  <link href="assets/plugins/node-waves/waves.min.css" rel="stylesheet" />
 
   <!-- Animation Css -->
-  <link href="assets/plugins/animate-css/animate.css" rel="stylesheet" />
-
-  <!-- Morris Chart Css-->
-  <!-- <link href="plugins/morrisjs/morris.css" rel="stylesheet" /> -->
+  <link href="assets/plugins/animate-css/animate.min.css" rel="stylesheet" />
 
   <!-- Custom Css -->
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
-  <link href="assets/css/themes/all-themes.css" rel="stylesheet" />
-  <!-- Morris Chart Css-->
-  <!-- <link href="public/plugins/morrisjs/morris.css" rel="stylesheet" /> -->
-
+  <link href="assets/css/themes/all-themes.min.css" rel="stylesheet" />
 </head>
 
 <body class="theme-indigo ls-block ls-closed">
+
   <app-root></app-root>
+
   <!-- Jquery Core Js -->
   <script src="assets/plugins/jquery/jquery.min.js"></script>
 
-  <!-- <script scr="https://cdn.jsdelivr.net/jquery.flot/0.8.3/jquery.flot.min.js"></script> -->
-
   <!-- Bootstrap Core Js -->
-  <script src="assets/plugins/bootstrap/js/bootstrap.js"></script>
-
-  <!-- Select Plugin Js -->
-  <!-- <script src="plugins/bootstrap-select/js/bootstrap-select.js"></script> -->
+  <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Slimscroll Plugin Js -->
   <script src="assets/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
 
   <!-- Waves Effect Plugin Js -->
-  <script src="assets/plugins/node-waves/waves.js"></script>
+  <script src="assets/plugins/node-waves/waves.min.js"></script>
 
   <!-- Jquery CountTo Plugin Js -->
   <script src="assets/plugins/jquery-countto/jquery.countTo.js"></script>
+
+  <!-- add the shim first
+  <script type="text/javascript" src="shim.min.js"></script>
+   after the shim is referenced, add the library 
+  <script type="text/javascript" src="xlsx.full.min.js"></script> -->
 
   <script src="assets/js/admin.js"></script>
   <script src="assets/js/pages/index.js"></script>
